do some tests, pass some tests, fail some tests. Basically like college

--- a/Library.Tests/Library.Tests.csproj
+++ b/Library.Tests/Library.Tests.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="MSTest.TestFramework" Version="1.1.11" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
-    <PackageReference Include="mysqlconnector" Version="0.54.0" />
+    <!-- <PackageReference Include="MySqLConnector" Version="0.54.0" /> -->
   </ItemGroup>
 
   <ItemGroup>
